--- a/app/src/main/res/layout/auto_root_fragment.xml
+++ b/app/src/main/res/layout/auto_root_fragment.xml
@@ -1,14 +1,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
-              android:orientation="vertical"
-              android:id="@+id/Top">
+              android:layout_marginTop="?attr/actionBarSize"
+              android:orientation="vertical">
 
     <ListView android:id="@android:id/list"
-              android:divider="@android:color/transparent"
-              android:dividerHeight="@dimen/card_divider_space"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:layout_margin="6dp"/>
+              android:layout_margin="6dp"
+              android:divider="@android:color/transparent"
+              android:dividerHeight="@dimen/card_divider_space"/>
 
 </LinearLayout>
