--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="primary_dark">#00796B</color>
     <color name="accent">#FFC107</color>
     <color name="icon_grey">#757575</color>
+
     <color name="red500">#F44336</color>
     <color name="green500">#4CAF50</color>
     <color name="grey500">#9E9E9E</color>
+    <color name="blue500">#2196F3</color>
     <color name="yellow500">#FFC107</color>
 
     <color name="dh_primary">#3F51B5</color>
@@ -17,9 +19,5 @@
     <color name="dh_primary_text">#dedede</color>
     <color name="dh_icons">#dedede</color>
     <color name="dh_divider">#313131</color>
-    <color name="dh_alertWarn">#FF9800</color>
-    <color name="dh_alertOk">@color/dh_accent</color>
-    <color name="dh_alertFail">@color/red500</color>
-
 
 </resources>
