--- a/app/src/main/res/drawable/ic_splash_activity.xml
+++ b/app/src/main/res/drawable/ic_splash_activity.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:drawable="@android:color/darker_gray"/>
+    <item android:drawable="@color/primary"/>
 
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@drawable/logo"/>
     </item>
 
 </layer-list>
