--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -10,8 +10,6 @@
             android:icon="@drawable/magisk"
             android:title="@string/magisk"/>
 
-
-
         <item
             android:id="@+id/modules"
             android:icon="@drawable/ic_extension"
@@ -22,6 +20,10 @@
             android:icon="@drawable/ic_cloud_download"
             android:title="@string/downloads"/>
 
+        <item
+            android:id="@+id/log"
+            android:icon="@drawable/ic_bug_report"
+            android:title="@string/log"/>
     </group>
 
     <group
@@ -41,23 +43,18 @@
 
     <group
         android:id="@+id/option_items"
-        android:checkableBehavior="single">
-
-        <item
-            android:id="@+id/log"
-            android:icon="@drawable/ic_bug_report"
-            android:title="@string/log"/>
+        android:checkableBehavior="none">
 
         <item
             android:id="@+id/settings"
             android:icon="@drawable/ic_settings"
             android:title="@string/settings"/>
 
-    </group>
+        <item
+            android:id="@+id/app_about"
+            android:icon="@drawable/ic_info_outline"
+            android:title="@string/about"/>
 
-    <item
-        android:id="@+id/app_about"
-        android:icon="@drawable/ic_info_outline"
-        android:title="@string/about"/>
+    </group>
 
 </menu>
