--- a/app/src/main/res/layout/root_fragment.xml
+++ b/app/src/main/res/layout/root_fragment.xml
@@ -19,11 +19,11 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/rootSwitchView"
+            style="?attr/cardStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="2dp"
             android:visibility="gone"
-            style="?attr/cardStyle"
             app:cardCornerRadius="0dp">
 
             <Switch
@@ -36,7 +36,7 @@
                 android:textSize="16sp"/>
 
         </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
+        <!-- <android.support.v7.widget.CardView
             android:id="@+id/autoRootSwitchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,15 +54,15 @@
                 android:text="@string/auto_toggle"
                 android:textSize="16sp"/>
 
-        </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView> -->
 
         <android.support.v7.widget.CardView
             android:id="@+id/selinuxSwitchView"
+            style="?attr/cardStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="2dp"
             android:visibility="gone"
-            style="?attr/cardStyle"
             app:cardCornerRadius="0dp">
 
             <Switch
@@ -78,6 +78,7 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/rootStatusView"
+            style="?attr/cardStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -85,7 +86,6 @@
             android:layout_marginRight="5dip"
             android:layout_marginTop="6dp"
             android:visibility="gone"
-            style="?attr/cardStyle"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
@@ -123,6 +123,7 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/safetynetStatusView"
+            style="?attr/cardStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -130,7 +131,6 @@
             android:layout_marginRight="5dip"
             android:layout_marginTop="6dp"
             android:visibility="gone"
-            style="?attr/cardStyle"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
@@ -160,6 +160,7 @@
 
         <android.support.v7.widget.CardView
             android:id="@+id/selinuxStatusView"
+            style="?attr/cardStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
@@ -167,7 +168,6 @@
             android:layout_marginRight="5dip"
             android:layout_marginTop="6dp"
             android:visibility="gone"
-            style="?attr/cardStyle"
             app:cardUseCompatPadding="true">
 
             <LinearLayout
